// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> matches the snapshot 1`] = `
<Button
  onClick={[MockFunction]}
  text="Button Text"
>
  <styled.button
    onClick={[MockFunction]}
    text="Button Text"
    type="submit"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "dNdkMm",
            "rules": Array [
              "
  background: white;
  color: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  padding: ",
              [Function],
              ";
  border: 2px solid ",
              [Function],
              ";
  border-radius: 3px;
  cursor: pointer;

  &:hover,
  &:active {
    transition: all 0.3s ease;
    background-color: ",
              [Function],
              ";
    color: white;
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[MockFunction]}
      text="Button Text"
      type="submit"
    >
      <button
        className="sc-bdVaJa dNdkMm"
        onClick={[MockFunction]}
        type="submit"
      >
        Button Text
      </button>
    </StyledComponent>
  </styled.button>
</Button>
`;

exports[`<Button /> updates via props 1`] = `
<styled.button
  onClick={[MockFunction]}
  text="Button Text"
  type="submit"
>
  Button Text
</styled.button>
`;

exports[`<Button /> updates via props 2`] = `
<styled.button
  onClick={[MockFunction]}
  text="New Button Text"
  type="submit"
>
  New Button Text
</styled.button>
`;
